# WhatsappGPT

./: .gitignore  ICON-SYSTEM.md  LICENSE  README.md  package-lock.json  package.json
WhatsappGPT-Portable/: Create-Desktop-Shortcut.bat  README.txt  Remove-Desktop-Shortcut.bat  Start-WhatsappGPT.vbs  WhatsappGPT.bat
releases/: README.md
src/: icon-manager.js  index.html  main.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: wgpt-events.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
