[package]
name = "whatsappgpt"
version = "1.0.0"
edition = "2021"

[dependencies]
# Tauri core
tauri = { version = "2.8.5", features = [] }

# Event payload parse için
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Windows API
[target.'cfg(windows)'.dependencies]
windows = { version = "0.61.3", features = [
  "Win32_Foundation",
  "Win32_UI_WindowsAndMessaging",
  "Win32_UI_Shell",
  "Win32_System_Com"
] }



[build-dependencies]
tauri-build = { version = "2.4.1", features = [] }
